исправил замечания ревьюера

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -54,11 +54,11 @@
           <p class="cover__description-text">
             Аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">Сделать ставку</button>
+          <button type="button" class="bet-button">Сделать ставку</button>
         </div>
       </section>
 
-      <section class="lots section-horizontal-padding">
+      <section class="lots">
         <h2 class="lots__heading section__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
@@ -68,7 +68,7 @@
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
-                <p class="card__text text-caption">
+                <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
@@ -83,7 +83,7 @@
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
-                <p class="card__text text-caption">
+                <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
                   рассказывается о 16 июня 1904 года и об истории литературы,
@@ -101,7 +101,7 @@
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
-                <p class="card__text text-caption">
+                <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
                   котиков... Сколько бы вы на такое поставили, если бы не знали,
@@ -115,7 +115,7 @@
         <a href="#0" class="lots__look-more-link">посмотреть больше</a>
       </section>
 
-      <section class="about section-horizontal-padding">
+      <section class="about">
         <div class="about__logo">
           <img
             class="about__logo-image"
@@ -124,7 +124,7 @@
           />
         </div>
         <h2 class="about__title section__heading">Об аукционе</h2>
-        <div class="about__text text-caption">
+        <div class="about__text">
           <p>
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
@@ -163,21 +163,21 @@
         </ul>
       </nav>
       <div class="footer__social-list">
-        <a class="footer__social-link" href="#0">
+        <a class="footer__social-link" href="#0" target="_blank">
           <img
             class="footer__social-icon"
             src="./images/yt.svg"
             alt="Youtube"
           />
         </a>
-        <a class="footer__social-link" href="#0">
+        <a class="footer__social-link" href="#0" target="_blank">
           <img
             class="footer__social-icon"
             src="./images/vk.svg"
             alt="Вконтакте"
           />
         </a>
-        <a class="footer__social-link" href="#0">
+        <a class="footer__social-link" href="#0" target="_blank">
           <img
             class="footer__social-icon"
             src="./images/pinterest.svg"
